--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "createMintPayload": "ts-node -T scripts/createMintPayload.ts",
     "mintFromPayload": "ts-node -T scripts/mintFromPayload.ts",
     "postMintSignatures": "ts-node -T scripts/postMintSignatures.ts",
-    "mintWithFee": "ts-node -T scripts/mintWithFee.ts"
+    "mintWithFee": "ts-node -T scripts/mintWithFee.ts",
+    "setTreasury": "ts-node -T scripts/setTreasury.ts",
+    "enableWithdrawals": "ts-node -T scripts/enableWithdrawals.ts",
+    "redeem": "ts-node -T scripts/redeem.ts"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
@@ -32,6 +35,7 @@
     "mocha": "^9.0.3",
     "prettier": "^2.6.2",
     "ts-mocha": "^10.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^4.3.5"
   }
 }
