--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bs58": "^6.0.0",
     "chai": "^4.3.4",
     "chai-as-promised": "7.1.2",
+    "ethers": "^6.13.5",
     "mocha": "^9.0.3",
     "prettier": "^2.6.2",
     "ts-mocha": "^10.0.0",
