added get Config script

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "setNextValidatorSet": "ts-node -T scripts/setNextValidatorSet.ts",
     "setTreasury": "ts-node -T scripts/setTreasury.ts",
     "transferOwnership": "ts-node -T scripts/transferOwnership.ts",
-    "unpause": "ts-node -T scripts/unpause.ts"
+    "unpause": "ts-node -T scripts/unpause.ts",
+    "getConfig": "ts-node -T scripts/getConfig.ts"
   },
   "dependencies": {
     "@coral-xyz/anchor": "0.31.0",
