--- a/programs/lbtc/Cargo.toml
+++ b/programs/lbtc/Cargo.toml
@@ -30,6 +30,7 @@ mpl-token-metadata = "5.1.0"
 sha2 = "0.10"
 solana-zk-token-sdk = "=2.1.0"
 spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
+solana-security-txt = "1.1.1"
 
 [dev-dependencies]
 hex = "0.4.3"
