--- a/docker-compose.localnet.yml
+++ b/docker-compose.localnet.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   solana-validator:
     container_name: solana-validator
@@ -15,10 +13,10 @@ services:
       - "8899:8899"
       - "8900:8900"
     command:
-      - /contracts/localnet/start_fork_devnet.sh
-    networks:
-      - ledger_localnet
-
-networks:
-  ledger_localnet:
-    external: true
+      - /contracts/localnet/start_clean.sh
+#    networks:
+#      - ledger_localnet
+#
+#networks:
+#  ledger_localnet:
+#    external: true
