--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@solana/spl-governance": "^0.3.28",
     "@solana/spl-token": "^0.4.12",
     "anchor-bankrun": "^0.5.0",
+    "dotenv": "^17.2.2",
     "js-sha256": "^0.11.0",
     "solana-bankrun": "^0.4.0",
     "tweetnacl": "^1.0.3"
