--- a/programs/lbtc/Cargo.toml
+++ b/programs/lbtc/Cargo.toml
@@ -19,12 +19,19 @@ no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [dependencies]
-anchor-lang = "0.31.0"
-anchor-spl = "0.31.0"
+anyhow = "1"
+arrayref = "0.3"
+anchor-lang = "0.31.1"
+anchor-spl = "0.31.1"
 bascule = { path = "../bascule", features = ["cpi"] }
+curve25519-dalek = { version = "4.1.3" }
+getrandom = { version = "0.1", features = ["dummy"] }
 mpl-token-metadata = "5.1.0" 
-solana_ed25519_verify = { git = "https://github.com/lombard-finance/solana_ed25519_verify", branch = "update-deps" }
-spl-token-2022 = { version = "8.0.0", features = ["no-entrypoint"] }
+sha2 = "0.10"
+solana-zk-token-sdk = "=2.1.0"
+spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
+solana-security-txt = "1.1.1"
 
 [dev-dependencies]
 hex = "0.4.3"
+solana-sdk = "2.1.0"
