fix: make mainnet default build feature (#26)

--- a/programs/lbtc/Cargo.toml
+++ b/programs/lbtc/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib", "lib"]
 name = "lbtc"
 
 [features]
-default = ["devnet"]
+default = ["mainnet"]
 mainnet = []
 devnet = []
 cpi = ["no-entrypoint"]
